# Dossier

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dev/bench/: data.js
docs/: INTEGRATION.md
dossier/: __main__.py
dossier/api/: routes_analytics.py  routes_collaboration.py  routes_documents.py  routes_entities.py  routes_forensics.py  routes_ingestion.py  routes_intelligence.py  routes_investigation.py  routes_search.py  server.py  utils.py
dossier/core/: api_graph.py  api_resolver.py  forensic_analyzer.py  graph_analysis.py  ner.py  resolver.py
dossier/db/: database.py
dossier/forensics/: __init__.py  anomaly.py  api_timeline.py  provenance.py  timeline.py
dossier/ingestion/: email_parser.py  email_pipeline.py  extractor.py  pipeline.py
dossier/ingestion/scrapers/: fara_lobbying.py  wikileaks_podesta.py
dossier/static/: index.html
test_corpus/: email_wire_transfer.eml  flight_manifest.csv  investigation_report.txt  lobbying_disclosure.json  shell_company_memo.txt
tests/: conftest.py  test_analytics_bulk.py  test_analytics_connections.py  test_analytics_document.py  test_analytics_entity.py  test_analytics_exports.py  test_analytics_graph.py  test_analytics_temporal.py  test_anomaly.py  test_api.py  test_batch_export.py  test_benchmarks.py  test_cli.py  test_database.py  test_extractor.py  test_forensic_analyzer.py  test_graph_analysis.py  test_graph_api.py  test_ner.py  test_pipeline.py  test_provenance.py  test_resolver.py  test_resolver_api.py  test_routes_collaboration.py  test_routes_documents.py  test_routes_entities.py  test_routes_forensics.py  test_routes_intelligence.py  test_routes_investigation.py  test_routes_search.py  test_timeline.py  test_timeline_api.py  test_utils.py  test_visualization.py
