[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dossier"
version = "0.6.0"
description = "Local-first document intelligence system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "pdfplumber>=0.10.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "aiofiles>=23.0",
    "python-dateutil>=2.8.0",
    "networkx>=3.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "striprtf>=0.0.26",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark>=4.0",
    "httpx",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["dossier*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["dossier"]
omit = [
    "dossier/__main__.py",
    "dossier/ingestion/scrapers/*",
    "dossier/ingestion/email_parser.py",
    "dossier/ingestion/email_pipeline.py",
    "dossier/ingestion/extractor.py",
    "dossier/ingestion/pipeline.py",
]
